set each component to display each components equally

--- a/src/app.scss
+++ b/src/app.scss
@@ -7,5 +7,10 @@
     background-color: lightsalmon;
     position: relative; 
     top: 70px;
+
+    > *{
+      width: 100vw;
+      height: calc(100vh - 70px);
+    }
   }
 }
