--- a/src/app.scss
+++ b/src/app.scss
@@ -7,10 +7,12 @@
     background-color: lightsalmon;
     position: relative; // make the components relative to fill out the empty white space at the bottom
     top: 70px; // starts at 70 px after the nav bar
+    scroll-snap-type: y mandatory;
 
     > *{ // >* means for each element inside the components
       width: 100vw;
       height: calc(100vh - 70px);
+      scroll-snap-align: start;
     }
   }
 }
