--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -15,5 +15,14 @@
     display: flex; 
     align-items: center; 
     justify-content: space-between;
+    
+    .left {
+      .logo{
+        font-size: 40px;
+        font-weight: 700;
+        text-decoration: none;
+        color: inherit; // removes purple color visited hover. inherit will use the topbar > color > $mainColor;
+      } 
+    }
   }
 }
