left className is now display flex and items aligned center

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -17,6 +17,9 @@
     justify-content: space-between;
     
     .left {
+      display: flex;
+      align-items: center;
+      
       .logo{
         font-size: 40px;
         font-weight: 700;
