--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -31,6 +31,15 @@
         display: flex;
         align-items: center;
         margin-left: 30px;
+        
+        .icon {
+          font-size: 18px;
+          margin-right: 5px;
+        }
+        span{
+          font-size: 15px;
+          font-weight: 400;
+        }
       }
     }
   }
