--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -38,7 +38,23 @@
         }
         span{
           font-size: 15px;
-          font-weight: 400;
+          font-weight: 500;
+        }
+      }
+    }
+    .right {
+      .hamburger{
+        width: 32px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+
+        span{
+          width: 100%;
+          height: 3px;
+          background-color:$mainColor;
         }
       }
     }
