--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -56,6 +56,7 @@
           height: 3px;
           background-color:$mainColor;
           transform-origin: left;
+          transition: all 2s ease;
         }
       }
     }
