--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,32 @@
 .intro {
-  background: lightpink;
+  background: whitesmoke;
+  display: flex;
+
+    .left{
+      flex: 0.5;
+      // background-color:yellow;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      
+      .imgContainer{
+        width: 700px;
+        height: 700px;
+        overflow: hidden;
+        // background-color: crimson;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        
+        img {
+          height: 100%;
+          
+        }
+      }
+    }
+    .right {
+      flex: 0.5;
+      background-color: red;
+    }
 }
