adjusted arrow again

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -50,7 +50,7 @@
     a{
       position: absolute;
       bottom: 10px;
-      // left: 50%; moves arrow to the right side of the page.
+      left: 40%; // moves arrow to the right side of the page.
       img {
         width: 30px;
       }
