animated arrow to fade out and blink back to normal

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -51,8 +51,16 @@
       position: absolute;
       bottom: 10px;
       left: 40%; // moves arrow to the right side of the page.
+
       img {
         width: 30px;
+        animation: arrowBlink 2s infinite;
+      }
+
+      @keyframes arrowBlink {
+        100%{
+          opacity: 0;
+        }
       }
     }
   }
