make the text to become typed writed animated

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -46,6 +46,10 @@
     }
     h3{
       font-size: 30px;
+      span {
+        font-size: inherit;
+        color: crimson;
+      }
     }
     a{
       position: absolute;
