--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .intro {
   background: whitesmoke;
   display: flex;
@@ -48,7 +50,7 @@
       font-size: 30px;
       span {
         font-size: inherit;
-        color: crimson;
+        color: #1e538c;
       }
     }
     a{
