--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -33,6 +33,12 @@
         align-items: center;
         margin-left: 30px;
         
+        img {
+          // border: 4px solid red;
+          width: 25px;
+          height: 25px;
+          margin-right: 5px;
+        }
         .icon {
           font-size: 18px;
           margin-right: 5px;
