--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -47,6 +47,18 @@
           font-size: 15px;
           font-weight: 500;
         }
+        a {
+          text-decoration: none;
+          color: inherit;
+          
+        }
+        a:visited {
+          text-decoration: none;
+        }
+        a:hover{
+          color: rgb(26, 67, 155)
+        }
+
       }
     }
     .right {
