--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .portfolio {
-  background-color: white;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,6 +29,7 @@
   .container{ 
     width: 70%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
