media query time

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,10 @@
 // $mainColor: #15023a;
 $mainColor: #35536d;
 
+$width: 768px;
 
+@mixin mobile {
+    @media (max-width: #{$width}){
+        @content
+    }
+}
