--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,6 +6,10 @@
   flex-direction: column;
   align-items: center;
 
+  @include mobile {
+    padding-top: 50px;
+  }
+
   h1{
     font-size: 50px;
   }
