--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -5,10 +5,12 @@
   display: flex;
   
   @include mobile {
-    border: 2px solid blue;
+    // border: 5px solid green;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    padding-top: 10px;
   }
 
   .ityped-cursor {
@@ -33,24 +35,18 @@
       flex-direction: column;
       align-items: center;
       border-radius: 15px;
+
+      @include mobile {
+        width: 250px;
+        height: 370px;
+        // overflow: hidden;
+        // border: 4px solid orange;
+        }
       
       img {
         height: 100%;
-
-        @include mobile {
-        height: 60%;
-        }
-        
-      }
-
-      @include mobile {
-      width: 450px;
-      height: 600px;
-      overflow: hidden;
-      border: 4px solid orange;
       }
     }
-
   }
   .right {
     flex: 0.5;
@@ -66,22 +62,34 @@
       justify-content: center;
 
       @include mobile {
-        border: 2px solid red;
-        padding-top: 1px;
+        // border: 2px solid red;
+        height: 300px;
+        width: 300px;
+        padding: 10px;
       }
     }
     h1{
       font-size: 60px;
       margin: 10px 0;
+
+      @include mobile {
+        font-size: 55px;
+      }
     }
     h2{
       font-size: 35px;
+      @include mobile {
+        font-size: 30px;
+      }
     }
     h3{
       font-size: 30px;
       span {
         font-size: inherit;
         color: #1e538c;
+      }
+      @include mobile {
+        font-size: 25px;
       }
     }
     a{
