--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -27,11 +27,16 @@
         text-decoration: none;
         color: inherit; // removes purple color visited hover. inherit will use the topbar > color > $mainColor;
         margin-right: 40px;
+
       } 
       .itemContainer{
         display: flex;
         align-items: center;
         margin-left: 30px;
+
+        @include mobile {
+          display: none;
+        }
         
         img {
           // border: 4px solid red;
