--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   @include mobile {
-    padding-top: 50px;
+    padding-top: 20px;
   }
 
   h1{
@@ -50,6 +50,11 @@
       position: relative;
       transition: all 0.5s ease;
       cursor: pointer;
+
+      @include mobile {
+        width: 200px;
+        height: 130px;
+      }
       h3 {
         position: absolute;
         font-size: 20px;
