everything mobile friendly for now

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -27,6 +27,7 @@
         text-decoration: none;
         color: inherit; // removes purple color visited hover. inherit will use the topbar > color > $mainColor;
         margin-right: 40px;
+        font-style: italic;
 
       } 
       .itemContainer{
