--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 50px;
 
   @include mobile {
     padding-top: 20px;
@@ -12,6 +13,10 @@
 
   h1{
     font-size: 50px;
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
   ul{
     margin: 10px;
@@ -31,19 +36,22 @@
     }
   }
   .container{ 
+    flex: 0.5;
     width: 70%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 
     @include mobile {
+      flex: 0.9;
+      width: 100%;
       overflow: hidden;
     }
     .item {
-      width: 220px;
-      height: 150px;
+      width: 250px;
+      height: 250px;
       border-radius: 20px;
       border: 1px solid rgb(240,239,239);
       margin: 10px 20px;
@@ -77,6 +85,60 @@
         }
       }
     }
-    
   }
+
+  .footer {
+    flex: 0.5;
+    // background-color: pink;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    @include mobile {
+      flex: 0.1;
+      display: flex;
+      flex-direction: row;
+    }
+    .itemContainer {
+      display: flex;
+      align-items: center;
+      
+      span {
+        font-size: 25px;
+
+        @include mobile {
+          font-size: 15px;
+        }
+      }
+
+      .icon {
+        font-size: 35px;
+        margin-right: 5px;
+      }
+
+      img {
+        // border: 4px solid red;
+        width: 25px;
+        height: 25px;
+        margin-right: 5px;
+      }
+
+      a {
+        text-decoration: none;
+        color: inherit;
+        
+      }
+      a:visited {
+        text-decoration: none;
+      }
+      a:hover{
+        color: rgb(26, 67, 155)
+      }
+
+
+    }
+  }
+
 }
