--- a/src/app.scss
+++ b/src/app.scss
@@ -4,7 +4,7 @@
   .sections {
     width: 100%;
     height: calc(100vh - 70px);
-    background-color: lightsalmon;
+    // background-color: lightsalmon;
     position: relative; // make the components relative to fill out the empty white space at the bottom
     top: 70px; // starts at 70 px after the nav bar
     scroll-behavior: smooth; // when you click ahref to navigate user to a component, it smoothly scroll to the certain content instead of "instantly" displaying the content
