--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -92,6 +92,13 @@
         font-size: 25px;
       }
     }
+    h4 {
+      padding-top: 20px;
+
+      span {
+        font-style: italic;
+      }
+    }
     a{
       position: absolute;
       bottom: 10px;
