--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -4,44 +4,91 @@
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  padding-top: 50px;
 
   @include mobile {
     padding-top: 20px;
   }
 
   h1{
-    font-size: 50px;
+    font-size: 40px;
 
     @include mobile {
       font-size: 20px;
     }
   }
-  ul{
-    margin: 10px;
-    padding: 0; 
-    list-style:none;
+
+  .top { 
     display: flex;
-    li {
-      font-size: 15px;
-      margin-right: 50px;
-      padding: 7px;
-      border-radius: 10px;
-      cursor: pointer;
-      &.active {
-        background-color: $mainColor;
-        color: white;
+    justify-content: space-between;
+    height: 400px;
+
+    .left {
+      flex: 0.5;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 10px;
+
+      img {
+        width: 660px;
+        height: 300px;
       }
     }
+
+    .right {
+      flex: 0.5;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 10px;
+
+      .title {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+          h1 {
+            font-size: 30px;
+          } 
+          p {
+            font-style: italic;
+            padding: 5px 0 5px 0;
+          }
+      }
+
+      .testimonial {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0 5px 0 5px;
+
+        h2 {
+          padding: 5px;
+        }
+        p {
+          font-size: 18px;
+          font-style: italic;
+          padding: 5px;
+          font-weight: normal;
+        }
+        span {
+          padding: 10px 0 0 0;
+          font-weight: lighter;
+          font-size: 18px;
+        }
+      } 
+    }
   }
-  .container{ 
-    flex: 0.5;
-    width: 70%;
+  .bottom { 
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 
     @include mobile {
@@ -86,59 +133,4 @@
       }
     }
   }
-
-  .footer {
-    flex: 0.5;
-    // background-color: pink;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-
-    @include mobile {
-      flex: 0.1;
-      display: flex;
-      flex-direction: row;
-    }
-    .itemContainer {
-      display: flex;
-      align-items: center;
-      
-      span {
-        font-size: 25px;
-
-        @include mobile {
-          font-size: 15px;
-        }
-      }
-
-      .icon {
-        font-size: 35px;
-        margin-right: 5px;
-      }
-
-      img {
-        // border: 4px solid red;
-        width: 25px;
-        height: 25px;
-        margin-right: 5px;
-      }
-
-      a {
-        text-decoration: none;
-        color: inherit;
-        
-      }
-      a:visited {
-        text-decoration: none;
-      }
-      a:hover{
-        color: rgb(26, 67, 155)
-      }
-
-
-    }
-  }
-
 }
