removed question and relocated to contact page

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -92,13 +92,13 @@
         font-size: 25px;
       }
     }
-    h4 {
-      padding-top: 20px;
+    // h4 {
+    //   padding-top: 20px;
 
-      span {
-        font-style: italic;
-      }
-    }
+    //   span {
+    //     font-style: italic;
+    //   }
+    // }
     a{
       position: absolute;
       bottom: 10px;
