--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,7 +2,7 @@
 
 .contact {
   flex: 0.5;
-  // background-color: pink;
+  background-color: whitesmoke;
   width: 100%;
   display: flex;
   flex-direction: row;
