intro page is mobile responsive for all 6 device views

--- a/src/global.scss
+++ b/src/global.scss
@@ -51,3 +51,21 @@ $largedesktopwidth: 1200px;
 // };
 
 
+// @include splitscreen {
+
+// }
+// @include mobile {
+
+// }
+// @include tablet {
+
+// }
+// @include laptop {
+
+// }
+// @include desktop {
+
+// }
+// @include tv {
+
+// }
