--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -3,8 +3,18 @@
 .intro {
   background: whitesmoke;
   display: flex;
+
+  @include splitscreen {
+    // background-color: purple;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    margin: 0;
+    padding-top: 10px;
+  }
   
   @include mobile {
+    // background-color: green;
     // border: 5px solid green;
     display: flex;
     flex-direction: column;
@@ -12,6 +22,31 @@
     margin: 0;
     padding-top: 10px;
   }
+
+  @include tablet {
+    // background-color: blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding-top: 10px;
+  }
+
+  @include laptop {
+    // background-color :red;
+    display: flex;
+    margin: 0;
+    padding-left: 10px;
+  }
+
+  @include desktop {
+    // background-color: yellow;
+  }
+
+  @include tv {
+    // background-color: pink;
+  }
+
 
   .ityped-cursor {
     animation: blink .7s infinite;
@@ -36,12 +71,22 @@
       align-items: center;
       border-radius: 15px;
 
-      @include mobile {
+      @include splitscreen{
         width: 250px;
-        height: 370px;
+        height: 350px;
+      }
+
+      @include mobile {
+        width: 300px;
+        height: 450px;
         // overflow: hidden;
         // border: 4px solid orange;
         }
+
+      @include tablet {
+        width: 330px;
+        height: 450px;
+      }
       
       img {
         height: 100%;
@@ -53,6 +98,12 @@
     position: relative;
     // background-color: red;
 
+    @include laptop {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-right: 5px;
+    }
     .wrapper{
       width: 100%;
       height: 100%;
@@ -61,24 +112,60 @@
       flex-direction:column;
       justify-content: center;
 
+      @include splitscreen{
+        // border: 2px solid red;
+        height: 250px;
+        width: 250px;
+        padding: 10px;
+      }
+
       @include mobile {
         // border: 2px solid red;
         height: 300px;
         width: 300px;
         padding: 10px;
       }
+
+      @include tablet {
+        // border: solid 2px white;
+        height: 300px;
+        width: 300px;
+        padding: 10px
+      }
+
+      @include laptop {
+        // border: solid 2px white;
+        height: 300px;
+        width: 300px;
+      }
     }
     h1{
       font-size: 60px;
       margin: 10px 0;
-
+      
+      @include splitscreen {
+        font-size: 40px;
+      }
       @include mobile {
         font-size: 55px;
+      }
+      @include tablet {
+        font-size: 55px;
+      }
+
+      @include laptop {
+        font-size: 50px;
       }
     }
     h2{
       font-size: 35px;
+      @include splitscreen {
+        font-size: 25px;
+      }
       @include mobile {
+        font-size: 30px;
+      }
+      @include tablet {
         font-size: 30px;
       }
     }
@@ -88,7 +175,16 @@
         font-size: inherit;
         color: #1e538c;
       }
+      @include splitscreen {
+        font-size: 20px;
+      }
       @include mobile {
+        font-size: 25px;
+      }
+      @include tablet {
+        font-size: 25px;
+      }
+      @include laptop {
         font-size: 25px;
       }
     }
