displayed none for github and email on splitscreen, mobile and tablet view

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -35,7 +35,13 @@
         align-items: center;
         margin-left: 30px;
 
+        @include splitscreen {
+          display: none;
+        }
         @include mobile {
+          display: none;
+        }
+        @include tablet {
           display: none;
         }
       
