--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -8,6 +8,7 @@
     // background-color: purple;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items:center;
     margin: 0;
     padding-top: 10px;
@@ -15,9 +16,9 @@
   
   @include mobile {
     // background-color: green;
-    // border: 5px solid green;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     margin: 0;
     padding-top: 10px;
@@ -25,16 +26,13 @@
 
   @include tablet {
     // background-color: blue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-    padding-top: 10px;
   }
 
   @include laptop {
     // background-color :red;
     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     margin: 0;
     padding-left: 10px;
   }
@@ -52,51 +50,82 @@
     animation: blink .7s infinite;
     -webkit-animation: blink .7s infinite;
     -moz-animation: blink .7s infinite;
-}
+  }
 
   .left{
     flex: 0.5;
-    // background-color:yellow;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include splitscreen{
+      flex: none;
+      width: 100%;
+      height: 50%;
+      display: flex;
+      align-items: flex-start;
+    }
+
+    @include mobile {
+      flex: none;
+      width: 100%;
+      height: 50%;
+    }
+
+    @include laptop {
+      width: 100%;
+      height: 100%;
+    }
     
     .imgContainer{
-      width: 450px;
+      width: 500px;
       height: 700px;
       overflow: hidden;
-      // background-color: crimson;
       display: flex;
       flex-direction: column;
       align-items: center;
-      border-radius: 15px;
 
       @include splitscreen{
-        width: 250px;
-        height: 350px;
+        width: 200px;
+        height: 240px;
       }
 
       @include mobile {
-        width: 300px;
-        height: 450px;
-        // overflow: hidden;
-        // border: 4px solid orange;
+        width: 220px;
+        height: 280px;
         }
 
       @include tablet {
-        width: 330px;
-        height: 450px;
+        padding: 5px;
+        width: 220px;
+        height: 280px;
+      }
+
+      @include laptop {
+        width: 400px;
+        height: 500px;
       }
       
       img {
         height: 100%;
+        width: 100%;
+        border-radius: 15px
+        }
       }
     }
-  }
+  
   .right {
     flex: 0.5;
     position: relative;
-    // background-color: red;
+
+    @include splitscreen {
+      flex: none;
+    }
+
+    @include mobile {
+      flex: none;
+      height: 240px;
+    }
 
     @include laptop {
       display: flex;
@@ -107,50 +136,46 @@
     .wrapper{
       width: 100%;
       height: 100%;
-      padding-left: 50px;
-      display:flex;
+      display: flex;
       flex-direction:column;
       justify-content: center;
 
       @include splitscreen{
-        // border: 2px solid red;
-        height: 250px;
+        height: 150px;
         width: 250px;
-        padding: 10px;
       }
 
       @include mobile {
-        // border: 2px solid red;
+        height: 70%;
+        width: 210px;
+      }
+
+      @include tablet {
+        padding: 10px;
+      }
+      
+      @include laptop {
         height: 300px;
         width: 300px;
         padding: 10px;
       }
-
-      @include tablet {
-        // border: solid 2px white;
-        height: 300px;
-        width: 300px;
-        padding: 10px
-      }
-
-      @include laptop {
-        // border: solid 2px white;
-        height: 300px;
-        width: 300px;
-      }
     }
+
     h1{
       font-size: 60px;
       margin: 10px 0;
       
       @include splitscreen {
-        font-size: 40px;
+        font-size: 30px;
       }
       @include mobile {
-        font-size: 55px;
+        font-size: 30px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
       }
       @include tablet {
-        font-size: 55px;
+        font-size: 40px;
       }
 
       @include laptop {
@@ -163,7 +188,10 @@
         font-size: 25px;
       }
       @include mobile {
-        font-size: 30px;
+        font-size: 20px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
       }
       @include tablet {
         font-size: 30px;
@@ -171,34 +199,32 @@
     }
     h3{
       font-size: 30px;
-      span {
-        font-size: inherit;
-        color: #1e538c;
-      }
       @include splitscreen {
         font-size: 20px;
       }
       @include mobile {
-        font-size: 25px;
+        font-size: 18px;
       }
       @include tablet {
-        font-size: 25px;
+        font-size: 20px;
       }
       @include laptop {
         font-size: 25px;
       }
+      span {
+        font-size: inherit;
+        color: #1e538c;
+      }
     }
-    // h4 {
-    //   padding-top: 20px;
 
-    //   span {
-    //     font-style: italic;
-    //   }
-    // }
     a{
       position: absolute;
       bottom: 10px;
       left: 40%; // moves arrow to the right side of the page.
+
+    @include splitscreen { 
+      display: none;
+    }
 
       img {
         width: 30px;
