--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -111,6 +111,9 @@
       height: 240px;
     }
 
+    @include tablet {
+      overflow: hidden;
+    }
     @include laptop {
       display: flex;
       justify-content: center;
