--- a/src/components/aboutme/aboutme.scss
+++ b/src/components/aboutme/aboutme.scss
@@ -4,60 +4,77 @@
   background-color: whitesmoke;
   display: flex; 
   justify-content: space-evenly;
+  flex-direction: row;
+  align-items: center;
+
+  @include splitscreen {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
 
   @include mobile {
     display: flex;
     flex-direction: column;
-    // border: solid 2px red;
-    align-items: center;
   }
 
   .left{
-    flex: 0.6;
-    position: relative;
-    // border: 2px solid red;
     width: 600px;
-    padding: 0 10px 0 10px;
 
-    @include mobile {
-      display: flex;
-      justify-content: center;
-      // border: 2px solid red;
-      width: 100%;
-      height: 100%;
+    @include splitscreen {
+      width: 230px;
+      height: 300px;
     }
 
+    @include mobile {
+      width: 400px;
+      height: 300px;
+    }
     .wrapper {
-      // background-color: blue;
-      // border: 3px solid black;
-      width: 100%;
-      height: 100%;
-      // padding-right: 10px;
-      // padding: 50px;
-      // padding-left: 10px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
 
-
-      @include mobile{
-        // flex: 0.4;
-        width: 100%;
-        height: 100%;
+      @include mobile {
         display: flex;
-        justify-content: center;
-        padding: 0 10px 0 10px;
-        // overflow: hidden;
+        flex-direction: column;
+        padding: 12px;
+      }
+
+      @include tablet {
+        padding: 10px;
+      }
+
+      @include desktop {
+        padding: 10px;
       }
     }
 
     h2 {
       color: black;
+      font-weight:300;
+      padding: 10px;
 
+      @include splitscreen {
+        font-size: 10px;
+        padding: 5px;
+      }
       @include mobile {
         font-size: 12px;
-        overflow: hidden;
+        padding: 5px;
+      }
+
+      @include tablet {
+        font-size: 12px;
+      }
+
+      @include laptop {
+        font-size: 16px;
+      }
+
+      @include desktop {
+        font-size: 22px;
       }
     }
 
@@ -67,43 +84,70 @@
       font-style: italic;
       font-size: 18px;
 
-      @include mobile{
-        // color: red;
-        padding: 5px;
-        font-size: 12px;
+      @include splitscreen {
+        font-size: 8px;
+      }
+
+      @include mobile {
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+      }
+      
+      @include tablet {
+        font-size: 10px;
+      }
+
+      @include laptop {
+        font-size: 14px;
       }
     }
   }
 
   .right {
-    flex: 0.3;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 800px;
-    padding-left: 0;
     
-    @include mobile {
-      flex: 0.6;
-    }
     .imgContainer {
-      width: 450px;
+      width: 460px;
       height: 700px;
-      overflow: hidden;
-      // border: solid 5px green;
-      border-radius: 15px;
+      padding: 10px;
+      display: flex;
+      justify-content: center;
 
+      @include splitscreen {
+        width: 150px;
+        height: 220px;
+        overflow: hidden;
+      }
       @include mobile {
-        // border: 5px solid orange;
-        display: flex;
-        justify-content: center;
-        height: 320px;
-        width: 210px;
-        // padding-bottom: 20px;
+        width: 160px;
+        height: 240px;
+        overflow: hidden;
       }
 
+      @include tablet {
+        width: 270px;
+        height: 320px;
+        overflow: hidden;
+      }
+
+      @include laptop {
+        width: 320px;
+        height: 420px;
+        overflow: hidden;
+      }
+
+      @include desktop {
+        width: 400px;
+        height: 600px;
+        overflow: hidden;
+      }
       img {
         height: 100%;
+        width: 100%;
+        border-radius: 15px;
       }
     }
   }
