--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,23 +7,23 @@
   justify-content: space-evenly;
   align-items: center;
 
-  @include splitscreen {
-    background-color:goldenrod;
-  }
-  @include mobile {
-    background-color: pink;
-  }
-  @include tablet {
-    background-color:lightseagreen;
-  }
+  // @include splitscreen {
+  //   background-color:goldenrod;
+  // }
+  // @include mobile {
+  //   background-color: pink;
+  // }
+  // @include tablet {
+  //   background-color:lightseagreen;
+  // }
 
-  @include laptop {
-    background-color: coral;
-  }
+  // @include laptop {
+  //   background-color: coral;
+  // }
 
-  @include desktop {
-    background-color:lightslategray
-  }
+  // @include desktop {
+  //   background-color:lightslategray
+  // }
 
   h1{
     font-size: 40px;
