--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -145,6 +145,14 @@
 
       @include mobile {
         flex: none;
+        padding: 8px;
+      }
+
+      @include tablet {
+        padding: 8px;
+      }
+      @include laptop {
+        padding: 8px;
       }
       .title {
         display: flex;
@@ -276,18 +284,19 @@
     }
 
     .item {
-      width: 240px;
-      height: 240px;
+      width: 350px;
+      height: 350px;
       border-radius: 5px;
-      border: 2px solid #35536d;
-      margin: 10px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      // border: 2px solid #35536d;
+      padding: 5px;
+      // display: flex;
+      // flex-direction: column;
+      // align-items: center;
+      // justify-content: center;
       color: #35536d;
       // position: relative;
       // transition: all 0.5s ease;
+      overflow: hidden;
 
       @include splitscreen { 
         width: 60px;
@@ -295,18 +304,19 @@
       }
 
       @include mobile {
-        width: 90px;
-        height: 90px;
+        width: 130px;
+        height: 130px;
+        // overflow: hidden;
       }
 
       @include tablet {
-        width: 100px;
-        height: 100px;
+        width: 150px;
+        height: 150px;
       }
 
       @include laptop {
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
       }
 
       @include desktop {
